# halfapi

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE.txt  Pipfile  README.md  optional-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.py.1
conf/: env.example  env.mallirmm
conf/nginx/: api
conf/systemd/: halfapi_example_api  halfapi_example_api.service  halfapi_example_api.socket  lirmm_api.service  lirmm_api.socket
halfapi/: __init__.py  __main__.py  acl.py  app.py  cli.py  conf.py  config.py  db.py  half_domain.py  half_route.py  halfapi.py  logging.py
halfapi/cli/: __init__.py  cli.py  config.py  domain.py  init.py  init_hop.py  route.py  routes.py  run.py
halfapi/cli/lib/: db.py
halfapi/lib/: acl.py  acl_caller_middleware.py  acl_middleware.py  constants.py  domain.py  domain_middleware.py  jwt_middleware.py  query.py  responses.py  router.py  routes.py  schemas.py  timing.py  user.py
halfapi/models/: api.sql  db_connector.py
halfapi/models/api/: acl_function.py  domain.py  route.py
halfapi/sql/: api.sql
halfapi/testing/: test_domain.py
models/: __init__.py
models/api/: __init__.py  acl.py  version.py
models/api/view/: __init__.py  acl.py  route.py
scripts/: get_token.py  whoami.sh
tests/: conftest.py  setup.py  test_acl.py  test_app.py  test_cli.py  test_cli_init_project.py  test_cli_proj.py  test_conf.py  test_constants.py  test_debug_routes.py  test_domain.py  test_dummy_domain.py  test_dummy_project_router.py  test_halfapi.py  test_jwt_middleware.py  test_jwt_middleware_debug.py  test_lib_domain.py  test_lib_domain_middlware.py  test_lib_responses.py  test_lib_router.py  test_lib_routes.py  test_lib_schemas.py
tests/cli/: test_cli.py  test_cli_config.py  test_cli_proj.py  test_cli_run.py  test_init_project.py
tests/dummy_domain/: __init__.py  acl.py
tests/dummy_domain/act/personne/: eo.py
tests/dummy_domain/routers/: __init__.py
tests/dummy_domain/routers/abc/: __init__.py
tests/dummy_domain/routers/abc/alphabet/: __init__.py
tests/dummy_domain/routers/abc/alphabet/TEST_uuid/: __init__.py
tests/dummy_domain/routers/abc/pinnochio/: __init__.py
tests/dummy_domain/routers/act/: __init__.py
tests/dummy_domain/routers/act/personne/: __init__.py
tests/dummy_domain/routers/arguments/: __init__.py
tests/dummy_domain/routers/async/: __init__.py
tests/dummy_domain/routers/async_router/: __init__.py
tests/dummy_domain/routers/config/: __init__.py
tests/dummy_domain/routers/path_params/FIRST_str/one/SECOND_uuid/: __init__.py
tests/dummy_domain/routers/ret_type/: __init__.py  _test.py
tests/dummy_domain/routers/ret_type/EXT_str/: __init__.py
tests/dummy_domain/routers/ret_type/EXT_str/config/: __init__.py
(+1 files in other folders)
