[tool.poetry]
name = "halfapi"
version = "0.1.0"
description = "The core module for an halfORM API"
authors = ["Joël Maizi <joel.maizi@lirmm.fr>", "Maxime Alves <maxime.alves@lirmm.fr>"]
homepage = "https://gite.lirmm.fr/newsi/api/halfapi"

[tool.poetry.dependencies]
click = "^7.0.0"
half-orm = { git = "git@gite.lirmm.fr:newsi/halfORM.git" }
PyJWT = "^1.7.0"
python = "^3.7"
starlette = "^0.13.0"
uvicorn = { version = "^0.11.0" }
fastapi = { version = "*", optional = true }
organigramme = { git = "git@gite.lirmm.fr:newsi/api/organigramme.git", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^3.4.0"
requests = "^2.0.0"

[tool.poetry.extras]
organigramme = [ "fastapi", "organigramme" ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
halfapi = 'halfapi.cli:cli'
