[tool.poetry]
name = "halfapi"
version = "0.1.0"
description = "The core module for an halfORM API"
authors = ["Joël Maizi <joel.maizi@lirmm.fr>", "Maxime Alves <maxime.alves@lirmm.fr>"]
homepage = "https://gite.lirmm.fr/newsi/api/halfapi"

[tool.poetry.dependencies]
click = "^7"
half-orm = { git = "git@gite.lirmm.fr:newsi/halfORM.git" }
PyJWT = "^1"
python = "^3.7"
starlette = "^0"
uvicorn = { version = "^0" }
apidb = { git = "git@gite.lirmm.fr:newsi/db/hop_api.git" }
fastapi = { version = "^0", optional = true }
organigramme = { git = "git@gite.lirmm.fr:newsi/api/organigramme.git", optional = true }
sidb = { git = "git@gite.lirmm.fr:newsi/sidb_halfORM.git", optional = true }
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5"
requests = "^2"
pytest-env = "^0.6.2"

[tool.poetry.extras]
organigramme = [ "fastapi", "organigramme", "sidb" ]

[tool.poetry.scripts]
halfapi = 'halfapi.cli:cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

